<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF7A89"
    tools:context=".SetupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/backgnew"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ProfilePicture"
            android:layout_width="160sp"
            android:layout_height="160sp"
            android:layout_marginStart="120dp"

            android:layout_marginTop="20dp"
            android:layout_marginEnd="121dp"
            android:background="@drawable/imagesecond"


            android:src="@drawable/people"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/userNameText"
            android:layout_width="311dp"
            android:layout_height="46sp"
            android:layout_marginStart="41dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="59dp"
            android:background="@drawable/textview"
            android:ems="10"
            android:hint="@string/name"
            android:textColorHint="#ABABAC"
            android:inputType="textPersonName"
            android:paddingStart="10sp"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:autofillHints="" />

        <EditText
            android:id="@+id/rollnoUserTxt"
            android:layout_width="311dp"
            android:textColorHint="#ABABAC"
            android:layout_height="46sp"
            android:layout_marginStart="41dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="59dp"
            android:background="@drawable/textview"
            android:ems="10"
            android:hint="@string/roll_number"
            android:inputType="textPersonName"
            android:paddingStart="10sp"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameText"
            android:autofillHints="" />

        <EditText
            android:id="@+id/batchUserTxt"
            android:layout_width="311dp"
            android:layout_height="46sp"
            android:layout_marginStart="41dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="59dp"
            android:background="@drawable/textview"
            android:ems="10"
            android:hint="@string/batch"
            android:inputType="textPersonName"
            android:paddingStart="10sp"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rollnoUserTxt" />

        <EditText
            android:id="@+id/mobileNumberUserText"
            android:layout_width="311dp"
            android:layout_height="46sp"
            android:layout_marginStart="41dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="59dp"
            android:background="@drawable/textview"
            android:ems="10"
            android:hint="@string/mobile_number"
            android:inputType="textPersonName"
            android:paddingStart="10sp"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/batchUserTxt"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="91dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/profile_details"
            android:textColor="#E24571"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.727"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="280sp"
            android:layout_height="47sp"
            android:layout_marginStart="66dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="66dp"


            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobileNumberUserText">

            <Button
                android:id="@+id/buttonUpdate"
                style="@android:style/Widget.Button"
                android:layout_width="115sp"
                android:layout_height="46sp"
                android:layout_marginEnd="15sp"
                android:alpha="150"
                android:background="@drawable/button"
                android:onClick="changeProfileFun"
                android:padding="10sp"
                android:text="@string/update"

                android:textColor="#ffffff"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonCancel"
                style="@android:style/Widget.Button"
                android:layout_width="115sp"
                android:layout_height="46sp"
                android:alpha="10"
                android:background="@drawable/bauttoncancelsecond"
                android:onClick="cancelFun"

                android:padding="10sp"
                android:text="@string/cancel"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="110sp"
            android:layout_height="25sp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="260dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button"
            android:gravity="center"
            android:onClick="changeImgFun"
            android:text="@string/change_photo"
            android:clickable="true"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/textView9"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="110sp"
            android:layout_height="25sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/bauttoncancelsecond"
            android:gravity="center"
            android:onClick="removeImgFun"
            android:text="@string/remove_photo"
            app:layout_constraintBottom_toTopOf="@+id/userNameText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ProfilePicture" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>