<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    tools:context=".SetupActivity">

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:background="@drawable/backgroundprofile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </androidx.constraintlayout.widget.ConstraintLayout>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ProfilePicture"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="bottom|center_horizontal"


            android:background="@drawable/imagesecond"

            android:onClick="addimgFun"
            android:padding="2dp"
            android:src="@drawable/people"

            />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="bottom|end"

            android:layout_marginEnd="120dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/imagesecond"
            android:elevation="5dp"
            android:foregroundGravity="center"

            android:padding="5dp"
            android:src="@drawable/ic_add_a_photo_black_24dp"
            android:contentDescription="@string/todo" />
    </FrameLayout>


    <EditText
        android:id="@+id/userNameText"
        android:layout_width="311dp"
        android:layout_height="46sp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="59dp"
        android:background="@drawable/textview"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="10sp"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout4"
        android:autofillHints="" />

    <EditText
        android:id="@+id/rollnoTxt"
        android:layout_width="311dp"
        android:layout_height="46sp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="59dp"
        android:background="@drawable/textview"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="10sp"
        android:hint="@string/roll_number"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/batchTxt"
        android:layout_width="311dp"
        android:layout_height="46sp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="59dp"
        android:background="@drawable/textview"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="10sp"
        android:hint="@string/batch"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollnoTxt"
        android:autofillHints="" />

    <EditText
        android:id="@+id/mobileNumberText"
        android:layout_width="311dp"
        android:layout_height="46sp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="59dp"
        android:background="@drawable/textview"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="10sp"
        android:hint="@string/mobile_number"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/batchTxt"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="91dp"
        android:fontFamily="sans-serif"
        android:text="@string/let_s_get_started"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Button"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="8dp"
        android:alpha="150"
        android:background="@drawable/button"
        android:onClick="register"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileNumberText" />
</androidx.constraintlayout.widget.ConstraintLayout>