<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:windowSoftInputMode="adjustNothing"

    android:background="#F1F1F1"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="31dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/dashboard"
        android:textColor="#7F7F7F"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:onClick="logoutButton"
        android:src="@drawable/ic_more_vert_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:windowSoftInputMode="adjustNothing"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/backgroundhomecec"
            android:elevation="25dp"

            android:paddingHorizontal="20dp"

            android:paddingTop="25dp"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/hello"
                android:textColor="#F1F1F1"

                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/mailLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.029"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mailLayout"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"

                android:layout_marginTop="64dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/textbackhome"
                android:gravity="center_horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColorHint="#ADADAD"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/mailID"
                    android:layout_width="215dp"
                    android:layout_height="40dp"
                    android:hint="@string/teacher_mail"
                    android:inputType="textEmailAddress"
                    android:textColor="#000000"
                    android:textColorHint="#FF494949"
                    android:textSize="14sp"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/subjectLayout"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/textbackhome"
                android:gravity="center_horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColorHint="#ADADAD"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mailLayout">

                <EditText
                    android:id="@+id/subjectID"
                    android:layout_width="215dp"
                    android:layout_height="40dp"
                    android:hint="@string/subject_code"
                    android:inputType="textEmailAddress"
                    android:textColor="#000000"
                    android:textColorHint="#494949"
                    android:textSize="14sp"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:id="@+id/homeFrame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:layout_marginEnd="45dp"
                android:background="@drawable/buttonbacknew"
                android:padding="2dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subjectLayout">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animationViewLottiehome"
                    android:layout_width="190dp"
                    android:layout_height="41dp"
                    android:layout_gravity="center"
                    android:elevation="12dp"
                    android:visibility="invisible"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="loading_animation.json"
                    app:lottie_loop="true" />

                <Button
                    android:id="@+id/startButton"
                    style="@android:style/Widget.Button"
                    android:layout_width="190dp"
                    android:layout_height="41dp"
                    android:layout_gravity="center"
                    android:alpha="150"

                    android:background="@drawable/buttonbacknew"
                    android:elevation="12dp"
                    android:onClick="markAttendance"
                    android:text="@string/start"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </FrameLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- TODO: Update blank fragment layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:windowSoftInputMode="adjustNothing"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="bottom"
            android:background="@drawable/backgroundhome"

            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="249dp"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recViewHist"
                android:layout_marginBottom="35dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="40dp"

                ></androidx.recyclerview.widget.RecyclerView>





        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>